--- a/static/main.css
+++ b/static/main.css
@@ -419,7 +419,7 @@ a:hover {
 /* heading  ---------------------------------------------------- */
     /*@import "blocks/heading/heading.scss"; 
 /* __ heading__title -------------------------------------------------- */
-.heading__title {
+.heading__title, .project__title {
   font-family: 'Montserrat', sans-serif;
   font-size: 40px;
   color: #222222;
@@ -427,7 +427,7 @@ a:hover {
   font-weight: 600;
   margin-bottom: 20px; }
   @media only all and (max-width: 360px) {
-    .heading__title {
+    .heading__title, .project__title {
       font-size: 33px; } }
 
 /* __>> heading__title--white -------------------------------------------------- */
@@ -443,16 +443,16 @@ a:hover {
       font-size: 43px; } }
 
 /* __ heading__subtitle -------------------------------------------------- */
-.heading__subtitle {
+.heading__subtitle, .project__description {
   font-size: 20px;
   margin-bottom: 60px;
   color: #777777; }
 
-.l-section--banner .heading__subtitle {
+.l-section--banner .heading__subtitle, .l-section--banner .project__description {
   margin-bottom: 60px;
   color: #cccccc; }
 
-.l-section--offer .heading__subtitle {
+.l-section--offer .heading__subtitle, .l-section--offer .project__description {
   margin-bottom: 20px;
   color: #cccccc; }
 
@@ -471,8 +471,9 @@ a:hover {
     text-align: left; }
   .project__description {
     font-size: 14px;
+    width: 100%;
+    max-width: 380px;
     margin-bottom: 25px;
-    text-align: justify;
     line-height: 1.5; }
   .project__features {
     text-align: left; }
